force-app/main/default/objects/Reject_Reason_Master__mdt/Reject_Reason_Master__mdt.object-meta.xml
<CustomObject>
    <label>Reject Reason Master</label>
    <pluralLabel>Reject Reason Master</pluralLabel>
</CustomObject>