force-app/main/default/objects/Reject_Reason_Master__mdt/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Not Interested</fullName>
                <default>true</default>
                <label>Customer Not Interested</label>
            </value>
            <value>
                <fullName>Cancellation Due to High ROI</fullName>
            </value>
            <value>
                <fullName>Post PD Query Not Resolved</fullName>
            </value>
            <value>
                <fullName>Duplicate Record</fullName>
            </value>
            <value>
                <fullName>Change in Applicant/Co-Applicant/Guarantor</fullName>
            </value>
            <value>
                <fullName>Wrong Data Entry</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>