force-app/main/default/objects/Reject_Reason_Master__mdt/fields/Cancellation_Source__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Source__c</fullName>
    <label>Cancellation Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Induced</fullName>
                <default>true</default>
                <label>Bank Induced</label>
            </value>
            <value>
                <fullName>Customer Induced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>