force-app/main/default/objects/Reject_Reason_Master__mdt/fields/Invoke_From__c.field-meta.xml
<CustomField>
    <fullName>Invoke_From__c</fullName>
    <label>Invoke From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reject</fullName>
                <default>true</default>
                <label>Reject</label>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>