force-app/main/default/objects/Reject_Reason_Master__mdt/fields/Reject_Validity__c.field-meta.xml
<CustomField>
    <fullName>Reject_Validity__c</fullName>
    <label>Reject Validity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>