force-app/main/default/objects/Reject_Reason_Master__mdt/fields/Rejection_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Sub_Reason__c</fullName>
    <label>Rejection Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligibility issue</fullName>
                <default>true</default>
                <label>Eligibility issue</label>
            </value>
            <value>
                <fullName>Policy norms not met</fullName>
            </value>
            <value>
                <fullName>Poor CIBIL history</fullName>
            </value>
            <value>
                <fullName>RCU Reject</fullName>
            </value>
            <value>
                <fullName>Unsatisfactory PD</fullName>
            </value>
            <value>
                <fullName>PEP Case</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>LOS Dedupe</fullName>
            </value>
            <value>
                <fullName>Pending Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>