force-app/main/default/objects/Reject_Reason_Master__mdt/fields/Rejection_Type__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Type__c</fullName>
    <label>Rejection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
                <default>true</default>
                <label>Hard</label>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>