force-app/main/default/objects/Reject_Reason_Master__mdt/listViews/Reject_Reason.listView-meta.xml
<ListView>
    <fullName>Reject_Reason</fullName>
    <columns>MasterLabel</columns>
    <columns>Rejection_Reason__c</columns>
    <columns>Rejection_Sub_Reason__c</columns>
    <columns>Reject_Validity__c</columns>
    <columns>Rejection_Type__c</columns>
    <columns>LOB__c</columns>
    <filterScope>Everything</filterScope>
    <label>Reject Reason</label>
</ListView>